--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "node --watch src/index.js",
-    "start":"node src/index.js",
+    "start": "node src/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
@@ -13,8 +13,8 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
-    "dev:docker":"sh ./scripts/dev.sh",
-    "prod:docker":"sh ./scripts/prod.sh"
+    "dev:docker": "sh ./scripts/dev.sh",
+    "prod:docker": "sh ./scripts/prod.sh"
   },
   "imports": {
     "#config/*": "./src/config/*",
@@ -41,6 +41,7 @@
     "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "jest": "^30.2.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "winston": "^3.17.0",
